--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "sqlite3": "^5.1.4"
   },
   "scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "nodemon ./src/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon ./src/app.js",
     "seedDB": "node ./src/database/seedDB.js"
-	}
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
