--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "sequelize": "^6.29.0",
     "sqlite3": "^5.1.4"
   },
   "scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "nodemon ./src/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon ./src/app.js",
     "seedDB": "node ./src/database/seedDB.js"
-	}
+  }
 }
