--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "express-validator": "^6.15.0",
+    "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "sequelize": "^6.29.0",
-    "sqlite3": "^5.1.4"
+    "sqlite3": "^5.1.4",
+    "xss-clean": "^0.1.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
